--- a/ProyectoFotoCore3/Views/Home/Index.cshtml
+++ b/ProyectoFotoCore3/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                         </div>
                         <div>
                             <span style="font-size:38px;">
-                                @Model.Sections
+                                @Model.Photos
                             </span>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                         </div>
                         <div>
                             <span style="font-size:38px;">
-                                @Model.Sections
+                                @Model.Sessions
                             </span>
                         </div>
                     </div>
