--- a/ProyectoFotoCore3/Views/Apartado/_TablaApartado.cshtml
+++ b/ProyectoFotoCore3/Views/Apartado/_TablaApartado.cshtml
@@ -7,6 +7,7 @@
             <th>Nombre</th>
             <th>Descripción</th>
             <th>Precio</th>
+            <th colspan="2">Opciones</th>
         </tr>
     </thead>
     <tbody>
@@ -16,6 +17,8 @@
                 <td>@apartado.Name</td>
                 <td style="line-break:anywhere">@apartado.Descripcion</td>
                 <td>@apartado.Price</td>
+                <td><i style="cursor: pointer;" class="material-icons" onclick="LoadPartial('modalApartado', '@Url.Action("Edit","Apartado")', 'GET', {'id': @apartado.Id});">edit</i></td>
+                <td><i style="color:red; cursor: pointer;" class="material-icons" onclick="DeleteApartado(@apartado.Id)">cancel</i></td>
             </tr>
         }
     </tbody>
