--- a/ProyectoFotoCore3/Views/Home/Index.cshtml
+++ b/ProyectoFotoCore3/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ProyectoFotoCore3.Models.Entities.Home.Model
 @model HomeVMO
     <div class="row mg-top-xl">
-        <div class="col s12 m7 l8 xl5">
+        <div class="col s12 m9 l8 xl5">
             <div class="card">
                 <div class="card-content" style="display:flex; text-align:center;">
                     <div style="flex:auto">
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s12 m7 l8 xl5">
+        <div class="col s12 m9 l8 xl5">
             <div class="card">
                 <div class="card-content" style="display:flex; text-align:center;">
                     <div style="flex:auto">
@@ -34,7 +34,7 @@
                             <span style="font-size:18px;">Sesiones</span>
                         </div>
                         <div>
-                            <buttom type="buttom" class="btn waves blue lighten-1">Gestionar</buttom>
+                            <a href="@Url.Action("Index","Sesion")" class="btn waves-effect waves-light blue lighten-1">Gestionar</a>
                         </div>
                     </div>
                     <div style="flex:auto; border-left: 1px solid;">
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="col s12 m7 l8 xl5">
+        <div class="col s12 m9 l8 xl5">
             <div class="card">
                 <div class="card-content" style="display:flex; text-align:center;">
                     <div style="flex:auto">
