--- a/ProyectoFotoCore3/wwwroot/css/application.css
+++ b/ProyectoFotoCore3/wwwroot/css/application.css
@@ -1,4 +1,5 @@
-﻿.btn-pictureManager {
+﻿@charset "UTF-8";
+.btn-pictureManager {
   height: 40px; }
 
 .btn-width-100 {
@@ -21,6 +22,118 @@
 
 .card-menu-title:hover {
   color: #616161 !important; }
+
+/* Carta con la imagen */
+.image-card {
+  display: block;
+  transition: transform 0.3s;
+  width: 200px;
+  height: auto;
+  margin-bottom: 32px; }
+
+/* Animación de carta en el que se agranda */
+.image-card:hover {
+  -ms-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2); }
+
+/* Contenido de la carta */
+.image-card-content {
+  display: flex;
+  position: relative;
+  align-items: flex-end; }
+
+/* Imagen de la carta */
+.image-card-img {
+  position: relative;
+  width: 100%;
+  height: 100%; }
+
+/* Menu en el pie de la carta */
+.image-card-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: absolute;
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 35px;
+  transition: 0.3s ease-out; }
+
+/* Animación del menu de la carta */
+.image-card-menu:hover {
+  height: 60px;
+  transition: 0.3s ease-out; }
+
+/* Titulo de la foto */
+.text-menu {
+  padding: 5px;
+  color: white;
+  font-size: 18px;
+  transition: 0.3s ease-out; }
+
+/* Animación del titulo de la foto */
+.image-card-menu:hover .text-menu {
+  padding: 15px 5px;
+  transition: 0.3s ease-out; }
+
+/* Contenedor de los iconos*/
+.icon-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  transition: 0.3s ease-out; }
+
+/* Animación de desplazamiento del contenedor de los iconos */
+.image-card-menu:hover .icon-container {
+  padding: 15px;
+  transition: 0.3s ease-out; }
+
+/* icono */
+.icon {
+  position: relative;
+  display: inline-block;
+  color: white;
+  font-size: 28px;
+  opacity: 0;
+  transition: 0.15s ease-out;
+  cursor: pointer;
+  margin: 0 5px; }
+
+/* Animación donde se muestran los iconos */
+.image-card-menu:hover .icon-container .icon {
+  opacity: 1;
+  transition: 0.15s ease-out; }
+
+/* formato en el que se ve el tooltip */
+.icon-text {
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  width: 80px;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  text-align: center;
+  font-family: sans-serif;
+  padding: 10px;
+  border-radius: 15px;
+  z-index: 4;
+  cursor: auto;
+  transition: 0.2s ease-out; }
+
+/* Alineación del tooltip para que se muestre arriba */
+.icon .icon-text {
+  width: 80px;
+  bottom: 120%;
+  left: 50%;
+  margin-left: -50px; }
+
+/* Aimación para que se muestre el tooltip */
+.icon:hover .icon-text {
+  opacity: 1;
+  visibility: visible;
+  transition: 0.2s ease-out; }
 
 .icon-center {
   text-align: center; }
