--- a/ProyectoFotoCore3/wwwroot/css/layout/Layout.scss
+++ b/ProyectoFotoCore3/wwwroot/css/layout/Layout.scss
@@ -43,3 +43,10 @@ main {
     width: 100%;
 }
 
+.flex {
+    display: flex;
+
+    &--space-between {
+        justify-content: space-between;
+    }
+}
